<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="vna.example.com.education.StudentNdDoctorMain.EditProfileStudent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >
            <EditText
                android:id="@+id/firstname_student_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstname"

                />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >
            <EditText
                android:id="@+id/secondnam_student_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/secondname"

                />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >
            <EditText
                android:id="@+id/phone_student_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"

                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >
            <EditText
                android:id="@+id/username_student_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usernamee"

                />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >
        <EditText
            android:id="@+id/passwad_student_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwardd"

            />
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/student_sub_edit"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textColor="#ffffff"
            android:text="Submit"
            android:background="@drawable/button_style"
            android:layout_margin="15dp"
            ></android.support.v7.widget.AppCompatButton>
    </LinearLayout>
    </LinearLayout>